feat: add entities: carts, cart_items, inventories
